--- a/EcommerceSystem/inventory-service/src/main/resources/application.yml
+++ b/EcommerceSystem/inventory-service/src/main/resources/application.yml
@@ -1,12 +1,5 @@
 server:
   port: 8081
-  servlet:
-    context-path: /inventory-service
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /swagger-ui.html
 spring:
   application:
     name: inventory-service
@@ -17,6 +10,16 @@ spring:
       collection: inventory
   profiles:
     active: local
-logging:
-  config: classpath:logback-spring.xml
-
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: health
