--- a/EcommerceSystem/order-service/src/main/resources/application.yml
+++ b/EcommerceSystem/order-service/src/main/resources/application.yml
@@ -1,7 +1,5 @@
 server:
   port: 8080
-  servlet:
-    context-path: /orders-service
 springdoc:
   api-docs:
     path: /api-docs
@@ -17,6 +15,8 @@ spring:
       collection: orders-service
   profiles:
     active: local
+
+###
 management:
   endpoint:
     health:
@@ -28,10 +28,12 @@ management:
   health:
     circuitbreakers:
       enabled: true
+  server:
+    port: 9004
 resilience4j:
   circuitbreaker:
     instances:
-      orders-service:
+      order-service-get:
         registerHealthIndicator: true
         failureRateThreshold: 50
         minimumNumberOfCalls: 5
@@ -40,8 +42,14 @@ resilience4j:
         permittedNumberOfCallsInHalfOpenState: 3
         slidingWindowSize: 10
         slidingWindowType: COUNT_BASED
-logging:
-  config: classpath:logback-spring.xml
-
+      order-service-post:
+        registerHealthIndicator: true
+        failureRateThreshold: 50
+        minimumNumberOfCalls: 5
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 5s
+        permittedNumberOfCallsInHalfOpenState: 3
+        slidingWindowSize: 10
+        slidingWindowType: COUNT_BASED
 
 
